cmd/aurelius/static/css/db-dir.css
html {
	min-height: 100%;
}

body {
	background: linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%));
	background-attachment: fixed;
	color: hsl(39, 100%, 93%);
}
#header {
	background-color: hsl(39, 100%, 93%);
	color: black;
}

body a {
	text-decoration: none;
	color: hsl(39, 100%, 93%);
}
body a:focus {
	outline: medium dashed rgba(0,0,0,.54);
}
body a:hover {
	box-shadow: 0 1px rgba(0,0,0,.54);
}

body .material-icons {
	color: black;
}

#header .material-icons { color: rgba(0, 0, 0, 0.54); }
#header .inactive .material-icons { color: rgba(0, 0, 0, 0.26); }

.clickable {
	cursor: pointer;

	-moz-user-select: -moz-none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
.clickable.inactive {
	cursor: default;
}

#header {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 4rem;
	box-shadow: 0px 0px .5rem black;
}

#status {
	display: flex;
}
#status > div {
	height: 1em;
	font-style: italic;
}
#status-left {
	margin-left: 1em;
	text-align: left;
}
#status-right-container {
	overflow: hidden;
	flex-grow: 1;
	margin: 0 .5em 0 .5em;
}
#status-right {
	max-width: 100%;
	max-height: 100%;
	text-align: right;
	white-space: nowrap;
}
#favorite-button, #unfavorite-button {
	margin-right: 1em;
}

#controls {
	display: flex;
	height: 3rem;
	color: rgba(0,0,0,.54);
}
#controls i {
	font-size: 3rem;
}

#progress-bar-container {
	flex-grow: 1;
	display: flex;
	flex-direction: column;
	justify-content: center;
}
#progress-bar-empty {
	position: relative;
	height: .5rem;
	box-shadow: inset 0 0 3px black;
	margin: 0 .5rem;
}
#progress-bar-empty.inactive {
	color: hsl(39, 16%, 69%);
}
#progress-bar-fill {
	position: absolute;
	top: 0;
	left: 0;
	width: 0;
	height: 100%;
	background-color: rgba(0,0,0,.27);
}
#seek-slider-area {
	position: absolute;
	left: 0;
	width: calc(100% - 3rem);
	height: 100%;
}
#seek-slider {
	position: absolute;
	width: 3rem;
	height: 200%;
	top: -50%;
	background-color: hsl(39, 8%, 43%);
}
#seek-slider.inactive {
	background-color: hsl(39, 16%, 69%);
}

#duration {
	width: 6em;
	color: black;
	text-align: right;
	margin-right: 1em;

	position: relative;
	top: 50%;
	transform: translateY(-50%);
}

#content {
	margin-top: 5rem;
}

.listing {
	list-style: none;
	padding: 0;
}
.listing i {
	margin-right: .25em;
}
.listing i, .listing a {
	vertical-align: middle;
}
.listing .aux-link {
	margin-left: .5em;
	font-style: italic;
}

#footer {
	position: fixed;
	z-index: -1;
	right: 0;
	bottom: 0;
	height: 8rem;
	margin: .5rem;
}
#footer img {
	height: 100%;
}

